[gd_scene load_steps=18 format=3 uid="uid://ml5bunib08fb"]

[ext_resource type="Script" uid="uid://d3w0dvyb2mxl1" path="res://Scripts/main_menu.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://jsrrxcl0h2na" path="res://Assets/SunnyLand/Layers/back.png" id="1_48xlc"]
[ext_resource type="FontFile" uid="uid://ie70s087rr8f" path="res://Assets/GPD.otf" id="3_yhxw7"]
[ext_resource type="Script" uid="uid://bfanymkqlw006" path="res://Scripts/music_slider.gd" id="4_ce3w2"]
[ext_resource type="Script" uid="uid://bpbutorur4ast" path="res://Scripts/fullscreen_control.gd" id="5_n45e2"]
[ext_resource type="Script" uid="uid://u8t1go0xjxkl" path="res://Scripts/vfx_slider.gd" id="6_cp0ys"]
[ext_resource type="Script" uid="uid://cytejr6v23518" path="res://Scripts/master_slider.gd" id="7_yhxw7"]
[ext_resource type="Script" uid="uid://cfm7va73cr457" path="res://Scripts/invincibility_control.gd" id="8_yhxw7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ce3w2"]
texture = ExtResource("1_48xlc")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48xlc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.760784, 0.454902, 0, 0.933333)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0.682353, 0.407843, 0, 0.862745)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_erv1k"]
bg_color = Color(1, 0.574454, 0.400705, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.211765)
shadow_size = 5
shadow_offset = Vector2(0, 3.42)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cp0ys"]
bg_color = Color(0.227451, 0.247059, 0.294118, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxLine" id="StyleBoxLine_1ehe0"]
color = Color(0, 0, 0.129412, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ce3w2"]
color = Color(1, 1, 1, 1)
thickness = 8

[sub_resource type="StyleBoxLine" id="StyleBoxLine_n45e2"]
color = Color(1, 1, 1, 1)
thickness = 8

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ce3w2")

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -79.0
offset_right = 270.5
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Button" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "START GAME"

[node name="Button2" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "OPTIONS"

[node name="Button3" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.5
offset_top = -284.0
offset_right = 130.5
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.839216, 0.505882, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_yhxw7")
theme_override_font_sizes/font_size = 40
text = "2D Platformer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -153.0
offset_right = 355.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cp0ys")

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 87.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
theme_override_font_sizes/font_size = 30
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = 148.0
offset_right = 164.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ehe0")
theme_override_styles/normal = SubResource("StyleBoxFlat_erv1k")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -157.0
offset_top = -74.0
offset_right = 158.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="Options/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_1ehe0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ce3w2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_n45e2")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("7_yhxw7")
audio_bus_name = "Master"

[node name="HBoxContainer" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="Options/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_1ehe0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ce3w2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_n45e2")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("4_ce3w2")
audio_bus_name = "Music"

[node name="HBoxContainer2" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 41

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
text = "VFX Volume"

[node name="VFXSlider" type="HSlider" parent="Options/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/slider = SubResource("StyleBoxLine_1ehe0")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_ce3w2")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_n45e2")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("6_cp0ys")
audio_bus_name = "VFX"

[node name="HBoxContainer4" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
text = "Fullscreen"

[node name="FullscreenControl" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
button_pressed = true
script = ExtResource("5_n45e2")

[node name="HBoxContainer5" type="HBoxContainer" parent="Options/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Options/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_yhxw7")
text = "Invincibility"

[node name="InvincibilityControl" type="CheckButton" parent="Options/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("8_yhxw7")

[connection signal="pressed" from="MainButtons/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Button2" to="." method="_on_options_2_pressed"]
[connection signal="pressed" from="MainButtons/Button3" to="." method="_on_exit_3_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer3/MasterSlider" to="Options/VBoxContainer/HBoxContainer3/MasterSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer/MusicSlider" to="Options/VBoxContainer/HBoxContainer/MusicSlider" method="_on_value_changed"]
[connection signal="value_changed" from="Options/VBoxContainer/HBoxContainer2/VFXSlider" to="Options/VBoxContainer/HBoxContainer2/VFXSlider" method="_on_value_changed"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer4/FullscreenControl" to="Options/VBoxContainer/HBoxContainer4/FullscreenControl" method="_on_toggled"]
[connection signal="toggled" from="Options/VBoxContainer/HBoxContainer5/InvincibilityControl" to="Options/VBoxContainer/HBoxContainer5/InvincibilityControl" method="_on_toggled"]
